--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Fake Google Page</title>
-  </head>
-  <body>
+    </head>
+
+    <body>
 
     <header> <!-- change buttons gmail account -->
 
@@ -20,11 +21,23 @@
     <section>
       <img src="http://urlz.fr/4UHO" alt="google"/>
        <input type="text" name="search" placeholder="">
-       <a href="www.google.com" alt="google">Google Search</a>
-       <a href="https://www.google.com/doodles" alt="doodles">I'm feeling lucky</a>
+       <div>
+         <a href="www.google.com" alt="google">Google Search</a>
+         <a href="https://www.google.com/doodles" alt="doodles" target="_blank">I'm feeling lucky</a>
+      </div>
        <p>Google.fr offered in <span style="color:blue">Français</span></p>
     </section>
 
+    <footer>
+      <a href="https://www.google.com/intl/fr/ads/?fg=1" alt="advertising">Advertising</a>
+      <a href="https://www.google.com/services/?fg=1" alt="business">Business</a>
+      <a href="https://www.google.com/intl/fr/about.html?fg=1" alt="about">About</a>
+      <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1" alt="privacy">Privacy</a>
+      <a href="https://www.google.fr/intl/fr/policies/terms/?fg=1" alt="terms">Terms</a>
+      <a href="https://www.google.fr/preferences?hl=fr" alt="settings">Settings</a>
 
-  </body>
+    </footer>
+
+    </body>
+
 </html>
