--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
     </section>
 
     <footer>
+
       <a href="https://www.google.com/intl/fr/ads/?fg=1" alt="advertising">Advertising</a>
       <a href="https://www.google.com/services/?fg=1" alt="business">Business</a>
       <a href="https://www.google.com/intl/fr/about.html?fg=1" alt="about">About</a>
-      <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1" alt="privacy">Privacy</a>
-      <a href="https://www.google.fr/intl/fr/policies/terms/?fg=1" alt="terms">Terms</a>
-      <a href="https://www.google.fr/preferences?hl=fr" alt="settings">Settings</a>
-
+      <aside>
+        <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1" alt="privacy">Privacy</a>
+        <a href="https://www.google.fr/intl/fr/policies/terms/?fg=1" alt="terms">Terms</a>
+        <a href="https://www.google.fr/preferences?hl=fr" alt="settings">Settings</a>
+      </aside>
     </footer>
 
     </body>
