--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Fake Google Page</title>
     </head>
 
@@ -10,11 +11,11 @@
 
     <header> <!-- change buttons gmail account -->
 
-      <a href="https://mail.google.com/mail/?tab=wm" alt="gmail" target="_blank">gmail</a>
-      <a href="http://urlz.fr/4UG8">google images</a>
-      <a href="https://www.google.com/intl/en/options/" alt="option" target="_blank">google option</a>
+      <a href="https://mail.google.com/mail/?tab=wm" alt="gmail" target="_blank">Gmail</a>
+      <a href="http://urlz.fr/4UG8">Images</a>
+      <a href="https://www.google.com/intl/en/options/" alt="option" target="_blank"><i class="material-icons">apps</i></a>
       <!-- need to add bell button -->
-      <a href="http://urlz.fr/4UFW" alt="gmail account" target="_blank">gmail account</a>
+      <a href="http://urlz.fr/4UFW" alt="gmail account" target="_blank" class="signin">Sign In</a>
 
     </header>
 
