--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="http://urlz.fr/4UG8">Images</a>
       <a href="https://www.google.com/intl/en/options/" alt="option" target="_blank"><i class="material-icons">apps</i></a>
       <!-- need to add bell button -->
-      <a href="http://urlz.fr/4UFW" alt="gmail account" target="_blank" class="signin">Sign In</a>
+      <a href="http://urlz.fr/4UFW" alt="gmail account" target="_blank" class="signin">Sign in</a>
 
     </header>
 
