class gmail line 14 and class images on line 15 created on index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <header> <!-- change buttons gmail account -->
 
-      <a href="https://mail.google.com/mail/?tab=wm" alt="gmail" target="_blank">Gmail</a>
-      <a href="http://urlz.fr/4UG8">Images</a>
+      <a href="https://mail.google.com/mail/?tab=wm" alt="gmail" target="_blank" class="gmail">Gmail</a>
+      <a href="http://urlz.fr/4UG8" class="images">Images</a>
       <a href="https://www.google.com/intl/en/options/" alt="option" target="_blank"><i class="material-icons">apps</i></a>
       <!-- need to add bell button -->
       <a href="http://urlz.fr/4UFW" alt="gmail account" target="_blank" class="signin">Sign in</a>
