--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
       <a href="https://mail.google.com/mail/?tab=wm" alt="gmail" target="_blank" class="gmail">Gmail</a>
       <a href="http://urlz.fr/4UG8" class="images">Images</a>
       <a href="https://www.google.com/intl/en/options/" alt="option" target="_blank"><i class="material-icons">apps</i></a>
-      <!-- need to add bell button -->
+              <!-- need to add bell button -->
       <a href="http://urlz.fr/4UFW" alt="gmail account" target="_blank" class="signin">Sign in</a>
 
     </header>
 
     <section>
       <img src="http://urlz.fr/4UHO" alt="google"/>
+
+        <!-- <input type="text"... is the code for a search bar -->
        <input type="text" name="search" placeholder="">
        <div>
          <a href="www.google.com" alt="google">Google Search</a>
