h2 put just under <section> l.24 on index.html

--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Fake Google Page</title>
+    <title>Google</title>
     </head>
 
     <body>
 
     <header> <!-- change buttons gmail account -->
 
-      <a href="https://mail.google.com/mail/?tab=wm" alt="gmail" target="_blank" class="gmail">Gmail</a>
+            <!-- Attribute "alt" not allowed on element "a" at this point.-->
+      <a href="https://mail.google.com/mail/?tab=wm" target="_blank" class="gmail">Gmail</a>
       <a href="http://urlz.fr/4UG8" class="images">Images</a>
-      <a href="https://www.google.com/intl/en/options/" alt="option" target="_blank"><i class="material-icons">apps</i></a>
+      <a href="https://www.google.com/intl/en/options/" target="_blank"><i class="material-icons">apps</i></a>
               <!-- need to add bell button -->
-      <a href="http://urlz.fr/4UFW" alt="gmail account" target="_blank" class="signin">Sign in</a>
+      <a href="http://urlz.fr/4UFW"  target="_blank" class="signin">Sign in</a>
 
     </header>
 
     <section>
-      <img src="http://urlz.fr/4UHO" alt="google"/>
+      <h2>Google.fr offered in <span style="color:blue">Français</span></h2>
+      <img src="http://urlz.fr/4UHO" alt="google" />
 
         <!-- <input type="text"... is the code for a search bar -->
        <input type="text" name="search" placeholder="">
        <div>
-         <a href="www.google.com" alt="google">Google Search</a>
-         <a href="https://www.google.com/doodles" alt="doodles" target="_blank">I'm feeling lucky</a>
+         <a href="www.google.com">Google Search</a>
+         <a href="https://www.google.com/doodles" target="_blank">I'm feeling lucky</a>
       </div>
-       <p>Google.fr offered in <span style="color:blue">Français</span></p>
+
     </section>
 
     <footer>
 
-      <a href="https://www.google.com/intl/fr/ads/?fg=1" alt="advertising">Advertising</a>
-      <a href="https://www.google.com/services/?fg=1" alt="business">Business</a>
-      <a href="https://www.google.com/intl/fr/about.html?fg=1" alt="about">About</a>
+      <a href="https://www.google.com/intl/fr/ads/?fg=1">Advertising</a>
+      <a href="https://www.google.com/services/?fg=1"></a>
+      <a href="https://www.google.com/intl/fr/about.html?fg=1">About</a>
       <aside>
-        <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1" alt="privacy">Privacy</a>
-        <a href="https://www.google.fr/intl/fr/policies/terms/?fg=1" alt="terms">Terms</a>
-        <a href="https://www.google.fr/preferences?hl=fr" alt="settings">Settings</a>
+        <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1"></a>
+        <a href="https://www.google.fr/intl/fr/policies/terms/?fg=1">Terms</a>
+        <a href="https://www.google.fr/preferences?hl=fr">Settings</a>
       </aside>
     </footer>
 
