--- a/index.html
+++ b/index.html
@@ -21,25 +21,23 @@
     </header>
 
     <section>
-      <h2>Google.fr offered in <span style="color:blue">Français</span></h2>
       <img src="http://urlz.fr/4UHO" alt="google" />
-
-        <!-- <input type="text"... is the code for a search bar -->
-       <input type="text" name="search" placeholder="">
-       <div>
-         <a href="www.google.com">Google Search</a>
-         <a href="https://www.google.com/doodles" target="_blank">I'm feeling lucky</a>
+      <!-- <input type="text"... is the code for a search bar -->
+      <input type="text" name="search" placeholder="">
+      <div>
+         <a href="www.google.com" class="googlesearch">Google Search</a>
+         <a href="https://www.google.com/doodles" target="_blank" class="lucky">I'm feeling lucky</a>
       </div>
-
+      <h2>Google.fr offered in:<a href="http://www.google.fr"><span style="color:blue">Français</span></a></h2>
     </section>
 
     <footer>
 
       <a href="https://www.google.com/intl/fr/ads/?fg=1">Advertising</a>
-      <a href="https://www.google.com/services/?fg=1"></a>
+      <a href="https://www.google.com/services/?fg=1">Business</a>
       <a href="https://www.google.com/intl/fr/about.html?fg=1">About</a>
       <aside>
-        <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1"></a>
+        <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1">Privacy</a>
         <a href="https://www.google.fr/intl/fr/policies/terms/?fg=1">Terms</a>
         <a href="https://www.google.fr/preferences?hl=fr">Settings</a>
       </aside>
